# small-beats-model

./: .gitignore  README.md  pyproject.toml
src/: orchestrator.py
src/small_beats_model/: build_dataset.py  data_scraper.py  dataset.py  deploy.py  eda.py  evaluate.py  generate.py  loader.py  model.py  models.py  package.py  preprocessing.py  run_generation.py  train.py  utils.py  visualizer.py  vocab.py
tests/: test_dataset_manual.py
vocabs/: vocab.json
