[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "small-beats-model"
version = "0.1.0"
description = "Small Beat Saber model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyascii>=0.3.3",
    "colorama>=0.4.6",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "typer>=0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/small_beats_model"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
